--- a/Botsite/botsite/manifest.json
+++ b/Botsite/botsite/manifest.json
@@ -46,5 +46,5 @@
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#000",
-    "theme_color": "rgba(130, 247, 94, 0.938)"
+    "theme_color": "#000"
   }
